--- a/cardapio.html
+++ b/cardapio.html
@@ -14,7 +14,7 @@
 <body>
     <nav>
         <div class="navbarpreto">
-            <img src="img/logo.png" class="logoimg">
+            <img src="logo.png" class="logoimg">
             <div class="box-busca">
 
                 <div class="search-box">
@@ -45,13 +45,8 @@
         </div>
     </nav>
     <section>
-        <img src="img/hamburguernovo.png" class="hamburgueres">
-        <br><br><br><br><br>
-        <div class="hamburguer1">
-            <img src="img/lanches/australiaburger.png" class="burguer1">
-            <h1 class="burguer1titulo">Australian Burguer</h1>
-            <p class="burguertext">Hambúrguer de 180 g, pulled pork - costelinha de porco marinada e assada lentamente, desfiada e misturada ao nosso molho barbecue com a presença da pimenta caiena (não é possível tirar a pimenta por fazer parte do preparo da costelinha), cheddar cremoso e salada coleslaw (base de repolhos, cenoura, creme de leite e limão siciliano), servido no pão australiano.</p>
-        </div>
+        <img src="hamburguernovo.png" class="hamburgueres">
+
     </section>
 </body>
 </html>
