--- a/cardapio.html
+++ b/cardapio.html
@@ -29,11 +29,17 @@
                 </div><!-- Search -->
             
             </div><!--Box Busca-->
-            <div class="icons">
+            <!-- <div class="icons"> -->
+                <div class="coracao">
                 <a href="#"><i class="bi bi-heart-fill" style="font-size: 30px; color: rgb(255, 255, 255);"></i></a>
+                </div>
+                <div class="carrinho">
                 <a href="#"><i class="bi bi-cart-fill" style="font-size: 30px; color: rgb(255, 255, 255);"></i></a>
+                </div>
+                <div class="contato">
                 <a href="#"><i class="bi bi-person-fill" style="font-size: 30px; color: rgb(255, 255, 255);"></i></a>
-            </div>
+                </div>
+                <!-- </div> -->
         </div>
         <div class="navbarlaranja">
             <ul>
