--- a/cardapio.html
+++ b/cardapio.html
@@ -58,6 +58,54 @@
             <img src="lanches/australiaburger.png" class="australian">
             <h1> Australian Burguer</h1>
             <li>Hambúrguer de 180 g, pulled pork - costelinha de porco marinada e assada lentamente, desfiada e misturada ao nosso molho barbecue com a presença da pimenta caiena (não é possível tirar a pimenta por fazer parte do preparo da costelinha), cheddar cremoso e salada coleslaw (base de repolhos, cenoura, creme de leite e limão siciliano), servido no pão australiano.</li>
+            <p>R$:39,00</p>
+        </div>
+        <div class="basehamburguer2">
+            <img src="lanches/brasilburger.png" class="brasil">
+            <h1> Brasil Burguer</h1>
+            <li>[APIMENTADO] Hambúrguer de 180 g, queijo cheddar especial, muita cebola crispy sequinhas, bacon glaceado, fatias de pimenta jalapeño e nosso molho barbecue artesanal, servido no pão australiano.</li>
+            <p>R$:39,00</p>
+        </div>
+        <div class="basehamburguer3">
+            <img src="lanches/italiaburger.jpeg" class="italia">
+            <h1> Italia Burguer</h1>
+            <li>Burger e queijo cheddar especial, servido no pão brioche.</li>
+            <p>R$:39,00</p>
+        </div>
+        <div class="basehamburguer4">
+            <img src="lanches/laosburger.png" class="laos">
+            <h1> Laos Burguer</h1>
+            <li>Hambúrguer feito com file de frango, queijo cheddar especial e mussarela, alface americana e guacamole, servido no pão brioche. Acompanha Fritas.</li>
+            <p>R$:39,00</p>
+        </div>
+        <div class="basehamburguer5">
+            <img src="lanches/letoniaburger.png" class="letonia">
+            <h1> Letonia Burguer</h1>
+            <li>Hambúrguer de 180 g, queijo cheddar especial, bacon crispy, tomate, picles, alface americana, finas fatias de cebola roxa e molho especial, servido no pão de brioche. Acompanha Fritas.</li>
+            <p>R$:39,00</p>
+        </div>
+        <div class="basehamburguer6">
+            <img src="lanches/tailandiaburger.jpeg" class="tailandia">
+            <h1> Tailandia Burguer</h1>
+            <li>Hambúrguer de 180 g, queijo cheddar especial, bacon crispy, tomate, picles, alface americana, finas fatias de cebola roxa e molho especial, servido no pão de brioche. Acompanha Fritas.</li>
+            <p>R$:39,00</p>
+        </div>
+        <div class="basehamburguer7">
+            <img src="lanches/taiwanburger.jpeg" class="taiwan">
+            <h1> Taiwan Burguer</h1>
+            <li>[APIMENTADO] Burger especialmente criado para o burger fest: Burger 180g, red cheddar (cheddar levemente apimentado com pedaços de bacon), 2 fatias de bacon crispy, muita cebola caramelizada no barbecue, mostarda dijon e picles.</li>
+            <p>R$:39,00</p>
+        </div>
+    </section>
+    <section>
+        <div class="banner2">
+            <img src="imagens/imagens/menu kids/MENU KIDS_cropped.png" class="menukids">
+        </div>
+        <div class="kidshamburguer">
+            <img src="imagens/imagens/menu kids/françaburger.png" class="frança">
+            <h1> França Burguer</h1>
+            <li>Burger em formato de coração. Acompa Batata Smile.</li>
+            <p>R$:39,00</p>
         </div>
     </section>
 </body>
