--- a/cardapio.html
+++ b/cardapio.html
@@ -107,6 +107,24 @@
             <li>Burger em formato de coração. Acompa Batata Smile.</li>
             <p>R$:39,00</p>
         </div>
+        <div class="kidshamburguer2">
+            <img src="imagens/imagens/menu kids/japaoburger.png" class="japao">
+            <h1>Japão Burguer</h1>
+            <li>Delicioso burger em formato de Pokemon, com orelhas feitas de Doritos. Acompanha Batatas Smiles..</li>
+            <p>R$:39,00</p>
+        </div>
+        <div class="kidshamburguer3">
+            <img src="imagens/imagens/menu kids/poloniaburger.jpeg" class="polonia">
+            <h1>Polonia Burguer</h1>
+            <li>Burger de 100g em formato de urso. Acompa Batata Smile.</li>
+            <p>R$:39,00</p>
+        </div>
+        <div class="kidshamburguer4">
+            <img src="imagens/imagens/menu kids/suiçaburger.png" class="suiça">
+            <h1>Suiça Burguer</h1>
+            <li>Cheese Burger de 120g, porção individual de fritas e molho da casa..</li>
+            <p>R$:39,00</p>
+        </div>
     </section>
 </body>
 </html>
