--- a/cardapio.html
+++ b/cardapio.html
@@ -126,5 +126,35 @@
             <p>R$:39,00</p>
         </div>
     </section>
+    <section>
+        <div class="banner3">
+            <img src="acompanhamentos_cropped.png" class="acomp">
+        </div>
+        <br><br><br><br>
+        <div class="acompanhamento">
+            <img src="imagens/imagens/aperitivos/fritastradicional.png" class="trad">
+            <h1>Fritas Tradicionais</h1>
+            <li>Nossas maravilhosas fritas sequinhas e crocantes. Acompanhado do molho tradicional da casa.</li>
+            <p>R$:39,00</p>
+        </div>
+        <div class="acompanhamento2">
+            <img src="imagens/imagens/aperitivos/fritascheddarebacon.png" class="bacon">
+            <h1>Fritas com Bacon</h1>
+            <li>Porção de fritas sequinhas com delicioso cheddar cremoso e farofa de bacon.</li>
+            <p>R$:39,00</p>
+        </div>
+        <div class="acompanhamento3">
+            <img src="imagens/imagens/aperitivos/cebola.jpg" class="cebola">
+            <h1>Aneis de Cebola</h1>
+            <li>Porção Grande de anéis de cebola empanados e fritos. Acompanha dois molhos a sua escolha.</li>
+            <p>R$:39,00</p>
+        </div>
+        <div class="acompanhamento4">
+            <img src="imagens/imagens/aperitivos/nuggets.jpeg" class="nugget">
+            <h1>Nugget</h1>
+            <li>Nuggets Supreme servido com molho Marinara.</li>
+            <p>R$:39,00</p>
+        </div>
+    </section>
 </body>
 </html>
