--- a/cardapio.html
+++ b/cardapio.html
@@ -156,5 +156,35 @@
             <p>R$:39,00</p>
         </div>
     </section>
+    <section>
+        <div class="banner4">
+            <img src="imagens/imagens/bebidas_cropped.png" class="bebida">
+        </div>
+        <br><br><br><br>
+        <div class="bebidas">
+            <img src="imagens/imagens/bebidas/água.jpg" class="agua">
+            <h1>Garrafa de Água</h1>
+            <li>opções: com gás e sem gás</li>
+            <p>R$:39,00</p>
+        </div>
+        <div class="bebidas2">
+            <img src="imagens/imagens/bebidas/refrigerantes.jpg" class="refri">
+            <h1>Refrigerantes</h1>
+            <li>Opções: Coca Cola, Coca Zero, Guaraná, Pepsi, Schweppes, Fanta Laranja</li>
+            <p>R$:39,00</p>
+        </div>
+        <div class="bebidas3">
+            <img src="imagens/imagens/bebidas/heineken.png" class="cerva1">
+            <h1>Cerveja Heineken</h1>
+            <li>Longneck</li>
+            <p>R$:39,00</p>
+        </div>
+        <div class="bebidas4">
+            <img src="imagens/imagens/bebidas/budweiser.jpg" class="cerva2">
+            <h1>Cerveja Budweiser</h1>
+            <li>Longneck</li>
+            <p>R$:39,00</p>
+        </div>
+    </section>
 </body>
 </html>
